--- a/trunk/armorysync/changelog.txt
+++ b/trunk/armorysync/changelog.txt
@@ -1,6 +1,13 @@
 ArmorySync v2.6.0
 Package updated Month DD, YYYY
 $Id$
+
+svn[272]
+- implemented protection of character deletion by meberlistsync from guildbank config
+-- every char recognized as bankchar will be protected
+-- Old config field protected guild title is still functional
+- updated frFR locales. thx to tuigii
+
 svn[269]
 - fixed bug with missing breaks in armorysync.class.php
 - fixed bug loading guild add screen after presync status screen
