--- a/trunk/armorysync/changelog.txt
+++ b/trunk/armorysync/changelog.txt
@@ -2,6 +2,9 @@ ArmorySync v2.6.0
 Package updated Month DD, YYYY
 $Id$
 
+svn[275]
+- fixed some image src path
+
 svn[274]
 - changed some method names to make method names unitary
 - outsourced ajax functions to own class armorysyncjobajax.class.php which extends armorysyncjob.class.php
