--- a/trunk/SMFSync/changelog.txt
+++ b/trunk/SMFSync/changelog.txt
@@ -1,3 +1,5 @@
+[276 - 102307]
+-Updated version number.
 [275 - 102307]
 -Fixed Login still working with SMFSync disabled.
 -Added updateCheck stuff.
