--- a/trunk/siggen/changelog.txt
+++ b/trunk/siggen/changelog.txt
@@ -2,22 +2,33 @@
 
 SigGen Change Log
 
+Changes 0.3.0b3 => 0.3.0.320
+Now using $roster->anchor instead of member=
+SigGen display on char page now shows the url with the image extension when SEO mode is enabled in Roster
+Added config to show different kinds of links on SigGen display page (default, force seo, saved)
+SigGen now saves images based on member id, this is to resolve the accent problem
+Fixed "The install definition file for siggen did not contain a correct installation class"
+Added clear saved directory setting, this will clear the save directory on a guild auto-save
+Removed av.php and sig.php, these are legacy files and are no longer needed
 
-10.28.07 - v0.3.0b3
+
+10.28.07 - v0.3.0.320
  * Important Changes
    o Ported to Roster 2.0
    o Supports multi guild and public abilities in Roster
-   o Accessing an image uses member= with either a member id, name, name@realm, or name@RC-realm
-     + name= access is now gone for good. Don't bother me about it, Roster uses member= now as well
-   o Images for auto save are now saved as Charname @ RC-Realm.ext (ext is the chosen image extention)
+   o Accessing an image uses a=c: with either a member id, name, name@realm, or name@RC-realm
+     + name= access is now gone for good. Don't bother me about it, Roster uses a=c: now as well
+   o Images for auto save are now saved as MemberID.ext (ext is the chosen image extention)
  * SigGen Generator
    o Fixed: etag dating, I have no idea why db_ver was added to the date
    o Changed: Access to SigGen image generator now uses the roster addon framework
      + I may put back in direct access to siggen.php but for now you must use the framework
-     + roster/index.php?p=util-siggen-signature&member=##
-     + (SEO) roster/util/siggen/signature/member=##.ext
+     + roster/index.php?p=util-siggen-signature&a=c:##
+     + (SEO) roster/util/siggen/signature/a=c:##.ext
      + This also means the path access sig.php/Name.png does not currently work, use mod_rewrite to bypass forum image restrictions
  * SigGen Config
+   o Added: Clear Saved Directory setting
+     + This will clear the save directory on a guild auto-save
    o Fixed: Settings Import will now show the correct error message instead of %1$s
    o Fixed: Updated some tooltips that haven't been updated in some time
    o Fixed: Notice error when no preview image is selected
