--- a/armorysync/changelog.txt
+++ b/armorysync/changelog.txt
@@ -2,6 +2,9 @@ ArmorySync v2.6.0
 Package updated Month DD, YYYY
 $Id$
 
+svn[356]
+- implemented gem tooltips for per page update
+
 svn[351]
 - implemented gem tooltips for per character update
 
