--- a/trunk/armorysync/changelog.txt
+++ b/trunk/armorysync/changelog.txt
@@ -2,6 +2,11 @@ ArmorySync v2.6.0
 Package updated Month DD, YYYY
 $Id$
 
+svn[365]
+- fixed looping in _ppGemSearchArmory
+- fixed some notices
+
+
 svn[361]
 - fixed __php_incomplete_class error
 - fixed chars not added to update table in per page update
