--- a/ItemSets/changelog
+++ b/ItemSets/changelog
@@ -1,3 +1,7 @@
+ItemSets 2.0.3.380:
+ - added support for german/french female class names
+ - fixed german translation for PvP_Epic Set
+ 
 ItemSets 2.0.3.376:
  - added french translation (thx foxbad)
  - compatibility with Joomla component com_wowroster
