--- a/trunk/SMFSync/changelog.txt
+++ b/trunk/SMFSync/changelog.txt
@@ -1,3 +1,6 @@
+[390 - 051308]
+-Fixed some bugs in the login form.
+-Updated login so that it now works with the latest update of roster.
 [320 - 051008]
 -Deleted hacked login.php that was used to replace normal one.
 -Deleted readme.txt as it only pertained to login.php
